[package]
name = "listing_3_1"
version = "0.1.0"
authors = ["Bert de Miranda <info@bertdemiranda.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.1"
chrono = "0.4"
proptest = "0.9.4"
quickcheck = "0.9"
quickcheck_macros = "0.8"